# dgemm

./: .gitignore  .travis.yml  LICENSE  README.md  createCudaPythonPackage.sh  createCudaRPackage.sh  createTutorialBranches.sh  example.R  example.py
.github/workflows/: Python_package.yml  R_package.yml
cpp/: CMakeLists.txt  Makefile  dgemm.h  dgemm_avx2.cpp  dgemm_cuda.cpp  dgemm_cuda.cu  main.cpp
dgemmPy/: MANIFEST.in  README.md  setup.py
dgemmPy/dgemmPy/: __init__.py
dgemmPy/dgemmPy/python/: dgemm.py  dgemm_py_blas.py  dgemm_py_loops.py
dgemmPy/dgemmPy/src/: Parallel.h  dgemm.cpp  dgemm.h  dgemm_avx2.cpp  dgemm_avx512.cpp  wrapper.cpp
dgemmPy/tests/: test_checkForEquality1.py  test_checkForEquality2.py  test_checkForEquality3.py  test_checkForEquality4.py  test_checkForEquality5.py  test_checkForEquality6.py  test_dgemm_equality.py
dgemmR/: DESCRIPTION  NAMESPACE
dgemmR/R/: dgemm.R  dgemm_C_blas.R  dgemm_C_loops.R  dgemm_C_loops_avx.R  dgemm_C_loops_avx_omp.R  dgemm_C_loops_avx_tp.R  dgemm_R_blas.R  dgemm_R_loops.R
dgemmR/man/: dgemm.Rd  dgemm_C_blas.Rd  dgemm_C_loops.Rd  dgemm_C_loops_avx.Rd  dgemm_C_loops_avx_omp.Rd  dgemm_C_loops_avx_tp.Rd  dgemm_R_blas.Rd  dgemm_R_loops.Rd
dgemmR/src/: Makevars  dgemm.cpp  dgemm.h  dgemm_avx512.cpp  dgemm_cuda.cu  wrapper.cpp
dgemmR/tests/: testthat.R
dgemmR/tests/testthat/: test_checkForEquality1.R  test_checkForEquality2.R  test_checkForEquality3.R  test_checkForEquality4.R  test_checkForEquality5.R  test_checkForEquality6.R  test_dgemm_equality.R
dgemmR/vignettes/: README.Rmd
img/: matrix.tex
